<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <FrameLayout
        android:id="@+id/main_container_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:orientation="horizontal"
        android:gravity="bottom">
        <TextView
            android:id="@+id/message"
            style="@style/tab_style"
            android:drawableTop="@drawable/ic_message"
            android:text="@string/message"/>
        <TextView
            android:id="@+id/friend"
            style="@style/tab_style"
            android:drawableTop="@drawable/ic_friend"
            android:text="@string/friend"/>
        <TextView
            android:id="@+id/home"
            style="@style/tab_style"
            android:drawableTop="@drawable/ic_home"
            android:text="@string/home"/>
        <TextView
            android:id="@+id/mine"
            style="@style/tab_style"
            android:drawableTop="@drawable/ic_mine"
            android:text="@string/mine"/>
    </LinearLayout>
    
</LinearLayout>