<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="40dp"
        android:theme="?attr/actionBarTheme">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/user_content"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_head"/>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/user_name"
                android:layout_marginStart="30dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/user_account"
                android:layout_marginStart="30dp"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/cardview_border"
            android:orientation="horizontal">
            <TextView
                android:text="@string/state"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font"/>
            <ImageView
                android:id="@+id/my_state_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/my_state_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/font" />
            <TextView
                android:id="@+id/my_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="45dp">

            <TextView
                android:id="@+id/change_state"
                style="@style/cardview_style"
                android:drawableTop="@drawable/ic_state"
                android:text="@string/change_state" />
            <TextView
                style="@style/cardview_style"
                android:drawableTop="@drawable/ic_location"
                android:text="@string/my_location"/>
            <TextView
                android:id="@+id/footprint"
                style="@style/cardview_style"
                android:drawableTop="@drawable/ic_footprint"
                android:text="@string/footprint"/>
            <TextView
                style="@style/cardview_style"
                android:drawableTop="@drawable/ic_connection"
                android:text="@string/question"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>



    <LinearLayout
        android:id="@+id/changePwd"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/user_info_border"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/changePwd"
            android:textColor="@color/font"
            android:textSize="15sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_change"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/user_info_border"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textColor="@color/font"
            android:textSize="15sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_set"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/user_info_border"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/account_set"
            android:textColor="@color/font"
            android:textSize="15sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_right" />
    </LinearLayout>


    
</LinearLayout>