<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Mine.Setting">

    <android.support.v7.widget.Toolbar
        android:id="@+id/account_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >
        <TextView
            android:id="@+id/change_title"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/account_set" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/user_info_border"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/exit"
            android:textColor="@color/font"
            android:textSize="15sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/user_info_border"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/Logout"
            android:textColor="@color/font"
            android:textSize="15sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_right" />
    </LinearLayout>

</LinearLayout>